--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.460.0",
     "nuxt": "^3.14.159",
+    "nuxt-echarts": "^0.2.4",
     "radix-vue": "^1.9.9",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
